syntax= "proto3";

package client_streaming;
option go_package = "github.com/JaimeRC/grpc-golang/client_streaming/proto";

message NumberRequest {
  int32 n = 1;
}

message SumResponse {
  int32 Result = 1;
}

service SumAllService{
  // client streaming rpc service
  rpc SumAll(stream NumberRequest) returns (SumResponse){};
}